--- a/doc/package.json
+++ b/doc/package.json
@@ -86,6 +86,7 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "fetch": "github:github/fetch@^1.0.0",
       "font-awesome": "npm:font-awesome@4.6.3",
+      "jquery": "npm:jquery@^3.1.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
