- update table settings and result

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "au-table",
-  "version": "0.2.0",
+  "name": "@jmvtrinidad/au-table",
+  "version": "0.2.2",
   "description": "A fork on project by Hector Romero. Added some support for server-side processing. A simple and powerful data table for Aurelia.",
   "keywords": [
     "aurelia",
